--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h4>I am very naughty</h4>
 <h5>I don't read at all. Every time I want to sleep</h5>
   <p>Nothing to say special about me. just want to say GOOD NIGHT SLEEP TIGHT</P>
-<centre><img=SKY></centre>
+<centre><img=SKY.PNG></centre>
 <ol>
 <li>It's a picture of sky clicked by me</li>
 <li>once again GOOD NIGHT</li>
