--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<HEAD><TITLE>Bio of Arindam</TITLE></HEAD>
+<HEAD><TITLE>Independence Day</TITLE></HEAD>
 <hrsize="5" color="red">
 <BODY BGcolor="pink"text="blue">
-<centre><MARQUEE><h1>Arindam Pal</h1></MARQUEE></centre>
-<legend><h2>Sagarpara*Murshidabad</h2></legend>
-<h3>Hi!I am a 1st year BS-MS student at IISER kolkata</h3>
-<h4>I am very naughty</h4>
-<h5>I don't read at all. Every time I want to sleep</h5>
-  <p>Nothing to say special about me. just want to say GOOD NIGHT SLEEP TIGHT</P>
-<centre><img src="SKY.png"></centre>
-<ol>
-<li>It's a picture of sky clicked by me</li>
-<li>once again GOOD NIGHT</li>
-<li>GOOD NIGHT</li>
-</ol>
+<centre><MARQUEE><h1>HAPPY 75th INDEPENDENCE DAY TO ALL INDIANS</h1></MARQUEE></centre>
+<legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
+<h3>Once again spread the happiness of Independence to all our beloved citizens</h3>
+<h4>Also bring the happiness and celebrate this great moment with maintaining COVID-19 protocols</h4>
+  <h4> </h4>
+
+  <h3>It's time to sing our National Anthem from our heart</h3>
+  <h4> </h4>
+<h2>Jana-gana-mana</h2>
+  <p>Jana-gana-mana-adhinayaka, jaya he
+Bharata-bhagya-vidhata.
+Punjab-Sindh-Gujarat-Maratha 
+Dravida-Utkala-Banga
+Vindhya-Himachala-Yamuna-Ganga 
+Uchchala-Jaladhi-taranga.
+Tava shubha name jage, 
+Tava shubha asisa mage, 
+Gahe tava jaya gatha, 
+Jana-gana-mangala-dayaka jaya he 
+Bharata-bhagya-vidhata.
+Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P>
+<centre><img src="FLAG.png"></centre>
+<h2>Stay Safe, Stay Happy </h2>
+<h2>A warm wish from Arindam </h2>
