--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h3>It's time to sing our National Anthem from our heart</h3>
   <h4> </h4>
 <h2>Jana-gana-mana</h2>
-  <p>Jana-gana-mana-adhinayaka, jaya he
-Bharata-bhagya-vidhata.
+  <p>Jana-gana-mana-adhinayaka, jaya he</p>
+<p>Bharata-bhagya-vidhata.
 Punjab-Sindh-Gujarat-Maratha 
 Dravida-Utkala-Banga
 Vindhya-Himachala-Yamuna-Ganga 
