--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HEAD><TITLE>Independence Day</TITLE></HEAD>
 <hrsize="5" color="red">
-<BODY BGcolor="pink"text="blue">
+<BODY BGcolor="saffron"text="dark green">
 <centre><MARQUEE><h1>HAPPY 75th INDEPENDENCE DAY TO ALL INDIANS</h1></MARQUEE></centre>
 <legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
 <h3>Once again spread the happiness of Independence to all our beloved citizens</h3>
@@ -11,17 +11,17 @@
   <h4> </h4>
 <h2>Jana-gana-mana</h2>
   <p>Jana-gana-mana-adhinayaka, jaya he</p>
-<p>Bharata-bhagya-vidhata.
-Punjab-Sindh-Gujarat-Maratha 
-Dravida-Utkala-Banga
-Vindhya-Himachala-Yamuna-Ganga 
-Uchchala-Jaladhi-taranga.
-Tava shubha name jage, 
-Tava shubha asisa mage, 
-Gahe tava jaya gatha, 
-Jana-gana-mangala-dayaka jaya he 
-Bharata-bhagya-vidhata.
-Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P>
+<p>Bharata-bhagya-vidhata.</p>
+<p>Punjab-Sindh-Gujarat-Maratha </p>
+<p>Dravida-Utkala-Banga</p>
+<p>Vindhya-Himachala-Yamuna-Ganga </p>
+<p>Uchchala-Jaladhi-taranga.</p>
+<p>Tava shubha name jage, </p>
+<p>Tava shubha asisa mage, </p>
+<p>Gahe tava jaya gatha, </p>
+<p>Jana-gana-mangala-dayaka jaya he </p>
+<p>Bharata-bhagya-vidhata.</p>
+<p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P>
 <centre><img src="FLAG.png"></centre>
 <h2>Stay Safe, Stay Happy </h2>
 <h2>A warm wish from Arindam </h2>
