--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HEAD><TITLE>Independence Day</TITLE></HEAD>
 <hrsize="5" color="red">
-<BODY BGcolor="dark green"text="saffron">
+<BODY BGcolor="dark green"text="light saffron">
 <centre><MARQUEE><h1>HAPPY 75th INDEPENDENCE DAY TO ALL INDIANS</h1></MARQUEE></centre>
 <legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
 <h3>Once again spread the happiness of Independence to all our beloved citizens</h3>
