--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
 <p>Bharata-bhagya-vidhata.</p>
 <p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P>
 <centre><img src="FLAG.png"></centre>
+  <h3>Our Nation Flag with tricolour</h3>
+  <ol>
+<li>saffron on top indicating strength and courage of the country</li>
+<li>White in middle dipicts peace and truth</li>
+    <li>Green in below it symbolizes the fertility, growth and auspiciousness of the land</li>
+    <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li>
+</ol>
+<centre><img src="INDIA.png"></centre>
+  <h2>INDIA</h2>
+  <h4> </h4>
 <h2>Stay Safe, Stay Happy </h2>
 <h2>A warm wish from Arindam </h2>
