--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <centre><img src="FLAG.png"></centre>
   <h3>Our Nation Flag with tricolour</h3>
   <ol>
-<li>saffron on top indicating strength and courage of the country</li>
+<li>Deep Saffron on top indicating strength and courage of the country</li>
 <li>White in middle dipicts peace and truth</li>
-    <li>Green in below it symbolizes the fertility, growth and auspiciousness of the land</li>
+    <li>Dark Green in below it symbolizes the fertility, growth and auspiciousness of the land</li>
     <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li>
 </ol>
 <centre><img src="INDIA.png"></centre>
