--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <hrsize="5" color="red">
 <BODY BGcolor="orange"text="green">
 <centre><MARQUEE><h1>HAPPY 75th INDEPENDENCE DAY TO ALL INDIANS</h1></MARQUEE></centre>
-<legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
+<centre><legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
 <h3>Once again spread the happiness of Independence to all our beloved citizens</h3>
 <h4>Also bring the happiness and celebrate this great moment with maintaining COVID-19 protocols</h4>
   <h4> </h4>
@@ -28,7 +28,7 @@
 <li>Deep Saffron on top indicating strength and courage of the country</li>
 <li>White in middle dipicts peace and truth</li>
     <li>Dark Green in below it symbolizes the fertility, growth and auspiciousness of the land</li>
-    <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li>
+    <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li></centre>
 </ol>
 <centre><img src="INDIA.png"></centre>
   <h2>INDIA</h2>
