--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <p>Gahe tava jaya gatha, </p>
 <p>Jana-gana-mangala-dayaka jaya he </p>
 <p>Bharata-bhagya-vidhata.</p>
-<p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P>
+<p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P></centre>
 <centre><img src="FLAG.png"></centre>
   <h3>Our Nation Flag with tricolour</h3>
   <ol>
 <li>Deep Saffron on top indicating strength and courage of the country</li>
 <li>White in middle dipicts peace and truth</li>
     <li>Dark Green in below it symbolizes the fertility, growth and auspiciousness of the land</li>
-    <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li></centre>
+    <li>And in betwen have Ashoka Chakra is a dipiction of Dharma Chakra</li>
 </ol>
 <centre><img src="INDIA.png"></centre>
   <h2>INDIA</h2>
