--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <hrsize="5" color="red">
 <BODY BGcolor="orange"text="green">
 <centre><MARQUEE><h1>HAPPY 75th INDEPENDENCE DAY TO ALL INDIANS</h1></MARQUEE></centre>
-<centre><legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend>
-<h3>Once again spread the happiness of Independence to all our beloved citizens</h3>
-<h4>Also bring the happiness and celebrate this great moment with maintaining COVID-19 protocols</h4>
+<centre><legend><h2>LET'S CELEBRATE THE PLATINUM JUBILEE OF INDIAN INDEPENDENCE</h2></legend></centre>
+<centre><h3>Once again spread the happiness of Independence to all our beloved citizens</h3></centre>
+<centre><h4>Also bring the happiness and celebrate this great moment with maintaining COVID-19 protocols</h4></centre>
   <h4> </h4>
 
-  <h3>It's time to sing our National Anthem from our heart</h3>
+  <centre><h3>It's time to sing our National Anthem from our heart</h3></centre>
   <h4> </h4>
-<h2>Jana-gana-mana</h2>
-  <p>Jana-gana-mana-adhinayaka, jaya he</p>
-<p>Bharata-bhagya-vidhata.</p>
-<p>Punjab-Sindh-Gujarat-Maratha </p>
-<p>Dravida-Utkala-Banga</p>
-<p>Vindhya-Himachala-Yamuna-Ganga </p>
-<p>Uchchala-Jaladhi-taranga.</p>
-<p>Tava shubha name jage, </p>
-<p>Tava shubha asisa mage, </p>
-<p>Gahe tava jaya gatha, </p>
-<p>Jana-gana-mangala-dayaka jaya he </p>
-<p>Bharata-bhagya-vidhata.</p>
-<p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P></centre>
+<centre><h2>Jana-gana-mana</h2></centre>
+  <centre><p>Jana-gana-mana-adhinayaka, jaya he</p></centre>
+<centre><p>Bharata-bhagya-vidhata.</p></centre>
+<centre><p>Punjab-Sindh-Gujarat-Maratha </p></centre>
+<centre><p>Dravida-Utkala-Banga</p></centre>
+<centre><p>Vindhya-Himachala-Yamuna-Ganga </p></centre>
+<centre><p>Uchchala-Jaladhi-taranga.</p></centre>
+<centre><p>Tava shubha name jage, </p></centre>
+<centre><p>Tava shubha asisa mage, </p></centre>
+<centre><p>Gahe tava jaya gatha, </p></centre>
+<centre><p>Jana-gana-mangala-dayaka jaya he </p></centre>
+<centre><p>Bharata-bhagya-vidhata.</p></centre>
+<centre><p>Jaya he, jaya he, jaya he, Jaya jaya jaya, jaya he! </P></centre>
 <centre><img src="FLAG.png"></centre>
   <h3>Our Nation Flag with tricolour</h3>
   <ol>
